--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="skill-row">
 
-      <img class="games" src="file:///F:/html/htmladi/images/video-game.png" alt="img">
+      <img class="games" src="https://github.com/Adityapathade/Basicwebsite/blob/main/images/video-game.png?raw=true" alt="img">
 
       <h3>I Love to Play Games.</h3>
 
