--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="img-cloud">
+      <img class="top-cloud" src="https://github.com/Adityapathade/Basicwebsite/blob/main/images/cloud.png?raw=true" alt="img-cloud">
       <h1>I'm Aditya.</h1>
       <h2>A <span class="pro">Pro</span>grammer.</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="img-cloud">
-      <img class="mountain" src="images/mountain.png" alt="img-mountain">
+      <img class="bottom-cloud" src="https://github.com/Adityapathade/Basicwebsite/blob/main/images/cloud.png?raw=true" alt="img-cloud">
+      <img class="mountain" src="https://github.com/Adityapathade/Basicwebsite/blob/main/images/mountain.png?raw=true" alt="img-mountain">
     <div class="middle-container">
 
   <div class="profile">
 
-    <img class="image-pro"src="file:///F:/html/htmladi/images/man.png" alt="Profil Pic">
+    <img class="image-pro"src="https://github.com/Adityapathade/Basicwebsite/blob/main/images/man.png?raw=true" alt="Profil Pic">
 
     <h2>Hello.</h2>
 
@@ -36,7 +36,7 @@
 
     <div class="skill-row">
 
-      <img class="prog" src="file:///F:/html/htmladi/images/programing.png"alt="image">
+      <img class="prog" src="https://github.com/Adityapathade/Basicwebsite/blob/main/images/programing.png?raw=true"alt="image">
 
       <h3>Programming and Learning.</h3>
 
