--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="profile">
 
-    <img class="image-pro"src="https://github.com/Adityapathade/Basicwebsite/blob/main/images/man.png?raw=true" alt="Profil Pic">
+    <img class="image-pro"src="images/man.png?raw=true" alt="Profil Pic">
 
     <h2>Hello.</h2>
 
